Fix image preview making window show scrollbars

--- a/public_html/chat.css
+++ b/public_html/chat.css
@@ -5,6 +5,7 @@ body {
     /* Follow NEaB's default text styling */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
+    overflow: hidden;
 }
 
 td {
